add dependency opencsv

--- a/src/main/java/ku/cs/com/github/saacsos/fxrouter-1.0.0/pom.xml
+++ b/src/main/java/ku/cs/com/github/saacsos/fxrouter-1.0.0/pom.xml
@@ -15,4 +15,14 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>4.0</version>
+        </dependency>
+    </dependencies>
+
+
 </project>
